--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-Organization loosely based on the git repo from Armin Ronacher found here:
+Originally inspired by the Armin Ronacher's dotfiles found here:
 https://github.com/mitsuhiko/dotfiles
