Fixed typo in README

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-Originally inspired by the Armin Ronacher's dotfiles found here:
+Originally inspired by Armin Ronacher's dotfiles found here:
 https://github.com/mitsuhiko/dotfiles
